-Admin tech 40 is now required to form Romania, but it is no longer required for Byzantium to not exist
-Austria is no longer formable by endgame nations
-After the Ascenion of Ladislaus event, Styria no longer needs Linz and Innsbruck to form Austria
-Hohenstaufer Inheritance incident can now also fire in the Age of Holy Wars
-The Polish Church no longer supports foreigners during the Fragmentation
-Decreased Edward the Confessor's lifespan even more and blocked him from introducing an heir manually
-Russian core countries are less likely to secede if the province owner is not an appanage
-Turkish beyliks will no longer grant Dhimmi autonomy
-Players now get events to deal with the rise of the Italian Communes
-Italian Communes will no longer be able to turn into a monarchy through passing all government reforms; they will have to use a decision turning them into a signoria or monarchy instead
-Sardinia-Piedmont's Age of Ideology ability is now -10 global years of separatism
-Swapped Phrygian and Cappadokian culture colours
-Changed Fife's traditions for the glory of Dundee
-Minor history changes especially around Saxony and the Palatinate

#Balance
-Slightly upped the rate at which advisor cost increases
-It is no longer possible to take the Russian Crown if you have the Byzantine Monarchy government

#Fixes
-Small fixes for the following mission trees: Flanders, Russia, Pisa, Mazovia, Switzerland, Provence, Sicily, Lorraine, Aragon, Altsachsen, Denmark, Outremer
-The Baltic Orders should finally, and I mean finally, spawn with proper techs
-Fixed major bug preventing Industrialism from spawning for Rule Britannia owners
-Forming the following nations now properly gives you their missions: Russia (by reforms), Great Britain (diplomatically), Lotharingia (as any tag other than Lorraine), Spain, Aquitaine, Tunis
-There are no longer two separate decisions to form Dalmatia