@@ -15,7 +15,7 @@ country_event = {
 	immediate = {
 		hidden_effect = {
 			set_global_flag = had_fragmentation_of_poland
-			set_country_flag = poland_fragmentation_active
+			set_global_flag = poland_fragmentation_active
 			WKP = {
 				define_exiled_ruler = {
 					exiled_as = WKP_new_ruler
@@ -648,9 +648,7 @@ country_event = {
 	trigger = {
 		is_part_of_hre = yes
 		culture_group = germanic
-		any_known_country = {
-			has_country_flag = poland_fragmentation_active
-		}
+		has_global_flag = poland_fragmentation_active
 		any_owned_province = {
 			any_neighbor_province = {
 				OR = {
@@ -790,9 +788,7 @@ country_event = {
 	fire_only_once = yes
 
 	trigger = {
-		any_known_country = {
-			has_country_flag = poland_fragmentation_active
-		}
+		has_global_flag = poland_fragmentation_active
 		any_subject_country = {
 			OR = {
 				primary_culture = pommeranian
@@ -846,9 +842,7 @@ country_event = {
 	}
 
 	trigger = {
-		any_known_country = {
-			has_country_flag = poland_fragmentation_active
-		}
+		has_global_flag = poland_fragmentation_active
 		NOT = { has_country_flag = acts_of_cienia_fired }
 		has_estate = estate_nobles
 		NOT = {
@@ -1001,9 +995,7 @@ country_event = {
 	}
 
 	trigger = {
-		any_known_country = {
-			has_country_flag = poland_fragmentation_active
-		}
+		has_global_flag = poland_fragmentation_active
 		OR = {
 			primary_culture = polish
 			primary_culture = schlesian
@@ -1078,9 +1070,7 @@ country_event = {
 	}
 
 	trigger = {
-		any_known_country = {
-			has_country_flag = poland_fragmentation_active
-		}
+		has_global_flag = poland_fragmentation_active
 		has_estate = estate_church
 		religion_group = christian
 		OR = {
@@ -1125,9 +1115,7 @@ country_event = {
 	}
 
 	trigger = {
-		any_known_country = {
-			has_country_flag = poland_fragmentation_active
-		}
+		has_global_flag = poland_fragmentation_active
 		OR = {
 			primary_culture = polish
 			primary_culture = schlesian
@@ -1228,9 +1216,7 @@ country_event = {
 	}
 
 	trigger = {
-		any_known_country = {
-			has_country_flag = poland_fragmentation_active
-		}
+		has_global_flag = poland_fragmentation_active
 		any_neighbor_country = {
 			primary_culture = volhynian
 		}
@@ -1308,7 +1294,7 @@ country_event = {
 	major = yes
 	
 	immediate = {
-		clr_country_flag = poland_fragmentation_active
+		clr_global_flag = poland_fragmentation_active
 		set_global_flag = fragmentation_of_poland_ended
 	}
 
@@ -1326,7 +1312,7 @@ country_event = {
     }
 }
 
-#End of Fragmentation (for non-KRA)
+#End of Fragmentation (if Poland was split)
 country_event = {
 	id = fragmentation_of_poland.101
 	title = fragmentation_of_poland.101.t
@@ -1338,19 +1324,25 @@ country_event = {
 	
 	trigger = {
 		tag = POL
-		NOT = { has_country_flag = poland_fragmentation_active }
-		NOT = { was_tag = KRA }
 		has_global_flag = pol_was_split
 		NOT = { started_in = 1305.6.21 }
+		has_global_flag = poland_fragmentation_active
+		NOT = { has_global_flag = fragmentation_of_poland_ended }
 		custom_trigger_tooltip = {
 			tooltip = disaster_active_for_10_years_tooltip
 			had_global_flag = {
-				flag = had_fragmentation_of_poland
+				flag = poland_fragmentation_active
 				days = 3650
 			}
 		}
 		stability = 1
 		is_at_war = no
+		NOT = {
+			any_owned_province = {
+				has_rebel_faction = nationalist_rebels
+			}
+		}
+		NOT = { num_of_rebel_controlled_provinces = 1 }
 		calc_true_if = {
 			MAZ = {
 				OR = {
@@ -1418,13 +1410,10 @@ country_event = {
 	immediate = {
 		hidden_effect = {
 			set_global_flag = fragmentation_of_poland_ended
+			clr_global_flag = poland_fragmentation_active
 			random_country = {
 				limit = { has_disaster = fragmentation_of_poland }
 				end_disaster = fragmentation_of_poland
-			}
-			random_country = {
-				limit = { has_country_flag = poland_fragmentation_active }
-				clr_country_flag = poland_fragmentation_active
 			}
 		}
 	}
