@@ -790,8 +790,8 @@
  fragmentation_of_poland.9.d: "[Root.Monarch.GetTitle], we have terrible news from [halychian_raid_area.GetAreaName]; a large group of brigands have terrorized the cities there, plundering and pillaging! Mass destruction has been left in their wake and the whole area is suffering; however, we were able to capture one of the brigands who revealed his allegiance to [halychian_raid_country.GetName].\nWe may not be able to solve the crisis in [halychian_raid_area.GetAreaName] immediately, but at least we know who is responsible; we must avenge the deaths of our innocent civilians and retaliate for this severe transgression."
  fragmentation_of_poland.9.a: "[halychian_raid_country.GetName] won't be walking off scot-free for this!"
  fragmentation_of_poland.100.t: "End of the Fragmentation Period"
- fragmentation_of_poland.100.d: "Ever since the Polish nation was divided by the hands of its own monarch, internecine feuds and squabbles have destroyed the agreement that was made to preserve the original dynasty. As a result our nation has been left in tatters and vulnerable to invasions from all directions, which have even come in the form of Germanic settlers colonizing our western regions.\nBut with our successful reformation and consolidation of the Polish state, we can finally mend the situation and ensure that the principle of agnatic seniority does not cause such a rift again. By bringing the lands we have lost back into the fold and proving ourselves worthy of the Polish throne we have gained new-found legitimacy in the eyes of both our subjects and the world. Perhaps most importantly of all, for the first time in centuries we will call ourselves true kings and queens rather than mere dukes and duchesses."
- fragmentation_of_poland.100.a: "Poland is united again!"
+ fragmentation_of_poland.100.d: "The Polish nation has been engulfed in a tumultuous period of unrest and succession disputes as a result of [Root.Monarch.GetName]'s refusal to heed the last will and testament of one of its late monarchs, which would have divided the nation among feuding brothers and left it in tatters.\nBut with our successful reformation and consolidation of the Polish state, we can finally mend the situation and ensure that the principle of agnatic seniority does not cause such a rift again. By bringing the lands we have lost back into the fold and proving ourselves worthy of the Polish throne we have gained new-found legitimacy in the eyes of both our subjects and the world. Perhaps most importantly of all, for the first time in centuries we will call ourselves true kings and queens rather than mere dukes and duchesses."
+ fragmentation_of_poland.100.a: "Poland remains united!"
  fragmentation_of_poland.101.t: "End of the Fragmentation Period"
  fragmentation_of_poland.101.d: "Ever since the Polish nation was divided by the hands of its own monarch, internecine feuds and squabbles have destroyed the agreement that was made to preserve the original dynasty. As a result our nation has been left in tatters and vulnerable to invasions from all directions, which have even come in the form of Germanic settlers colonizing our western regions.\nBut with our successful reformation and consolidation of the Polish state, we can finally mend the situation and ensure that the principle of agnatic seniority does not cause such a rift again. By bringing the lands we have lost back into the fold and proving ourselves worthy of the Polish throne we have gained new-found legitimacy in the eyes of both our subjects and the world. Perhaps most importantly of all, for the first time in centuries we will call ourselves true kings and queens rather than mere dukes and duchesses."
  fragmentation_of_poland.101.a: "Poland is united again!"
