@@ -790,8 +790,8 @@
  fragmentation_of_poland.9.d: "[Root.Monarch.GetTitle], wir haben schreckliche Nachrichten aus [halychian_raid_area.GetAreaName]; eine große Gruppe von Räubern hat die dortigen Städte terrorisiert, geplündert und verwüstet! Sie haben massive Zerstörungen hinterlassen, worunter das ganze Gebiet leidet; wir konnten jedoch einen der Räuber fassen, der seine Loyalität zu [halychian_raid_country.GetAreaName] offenbarte.\nWir sind vielleicht nicht in der Lage, die Krise in [halychian_raid_area.GetAreaName] sofort zu lösen, aber zumindest wissen wir, wer dafür verantwortlich ist; wir müssen den Tod unserer unschuldigen Zivilisten rächen und Vergeltung für diese schwere Sünde üben."
  fragmentation_of_poland.9.a: "[halychian_raid_country.GetName] wird dafür nicht ungeschoren davonkommen!"
  fragmentation_of_poland.100.t: "Ende der Fragmentierungsphase"
- fragmentation_of_poland.100.d: "Seit die polnische Nation durch die Hände ihres eigenen Monarchen geteilt wurde, haben innenpolitische Fehden und Zankereien die Übereinkunft zerstört, die zur Erhaltung der ursprünglichen Dynastie getroffen wurde. Infolgedessen ist unsere Nation in Scherben zerbrochen und anfällig für Invasionen aus allen Richtungen, die sogar in Form von deutschen Siedlern kamen, die unsere westlichen Regionen kolonisierten, geworden.\nDoch mit unserer erfolgreichen Reformierung und Konsolidierung des polnischen Staates können wir die Situation endlich bereinigen und dafür sorgen, dass das Prinzip des agnatischen Senioritätsprinzips nicht wieder zu einer solchen Spaltung führt. Indem wir die Länder, die wir verloren haben, wieder in den Kreis der Familie aufnehmen und uns des polnischen Throns würdig erweisen, haben wir sowohl in den Augen unserer Untertanen als auch in den Augen der Welt eine neue Legitimität erlangt. Am wichtigsten ist vielleicht, dass wir uns zum ersten Mal seit Jahrhunderten echte Könige und Königinnen und nicht nur Herzöge und Herzoginnen nennen werden."
- fragmentation_of_poland.100.a: "Polen ist wieder vereint!"
+ fragmentation_of_poland.100.d: "The Polish nation has been engulfed in a tumultuous period of unrest and succession disputes as a result of [Root.Monarch.GetName]'s refusal to heed the last will and testament of one of its late monarchs, which would have divided the nation among feuding brothers and left it in tatters.\nDoch mit unserer erfolgreichen Reformierung und Konsolidierung des polnischen Staates können wir die Situation endlich bereinigen und dafür sorgen, dass das Prinzip des agnatischen Senioritätsprinzips nicht wieder zu einer solchen Spaltung führt. Indem wir die Länder, die wir verloren haben, wieder in den Kreis der Familie aufnehmen und uns des polnischen Throns würdig erweisen, haben wir sowohl in den Augen unserer Untertanen als auch in den Augen der Welt eine neue Legitimität erlangt. Am wichtigsten ist vielleicht, dass wir uns zum ersten Mal seit Jahrhunderten echte Könige und Königinnen und nicht nur Herzöge und Herzoginnen nennen werden."
+ fragmentation_of_poland.100.a: "Poland remains united!"
  fragmentation_of_poland.101.t: "Ende der Fragmentierungsphase"
  fragmentation_of_poland.101.d: "Seit die polnische Nation durch die Hände ihres eigenen Monarchen geteilt wurde, haben innenpolitische Fehden und Zankereien die Übereinkunft zerstört, die zur Erhaltung der ursprünglichen Dynastie getroffen wurde. Infolgedessen ist unsere Nation in Scherben zerbrochen und anfällig für Invasionen aus allen Richtungen, die sogar in Form von deutschen Siedlern kamen, die unsere westlichen Regionen kolonisierten, geworden.\nDoch mit unserer erfolgreichen Reformierung und Konsolidierung des polnischen Staates können wir die Situation endlich bereinigen und dafür sorgen, dass das Prinzip des agnatischen Senioritätsprinzips nicht wieder zu einer solchen Spaltung führt. Indem wir die Länder, die wir verloren haben, wieder in den Kreis der Familie aufnehmen und uns des polnischen Throns würdig erweisen, haben wir sowohl in den Augen unserer Untertanen als auch in den Augen der Welt eine neue Legitimität erlangt. Am wichtigsten ist vielleicht, dass wir uns zum ersten Mal seit Jahrhunderten echte Könige und Königinnen und nicht nur Herzöge und Herzoginnen nennen werden."
  fragmentation_of_poland.101.a: "Polen ist wieder vereint!"
