@@ -624,6 +624,7 @@
  hussite_wars_desc: "Inadequate religious tolerance caused the Hussites to provoke a fierce civil war."
  fragmentation_of_poland: "Fragmentation of Poland"
  fragmentation_of_poland_desc: "The ruler of Poland has issued a will dividing the kingdom among their sons."
+ pol_was_not_split: "Poland has not been divided in the Last Will and Testament (If Poland is divided, the disaster will end once the rest of these conditions are fulfilled for any country that reforms Poland)"
  sicilian_vespers: "Sicilian Vespers"
  sicilian_vespers_desc: "Widespread discontent with their foreign ruler has led to a rebellion in Sicily."
  norwegian_civil_war: "Norwegian Civil War"
