@@ -621,6 +621,7 @@
  hussite_wars_desc: "Unzureichende religiöse Toleranz veranlasste die Hussiten, einen heftigen Bürgerkrieg zu provozieren."
  fragmentation_of_poland: "Fragmentierung von Polen"
  fragmentation_of_poland_desc: "Der Herrscher von Polen hat ein Testament erlassen, das das Königreich unter seinen Söhnen aufteilt."
+ pol_was_not_split: "Poland has not been divided in the Last Will and Testament (If Poland is divided, the disaster will end once the rest of these conditions are fulfilled for any country that reforms Poland)"
  norwegian_civil_war: "Norwegischer Bürgerkrieg"
  norwegian_civil_war_desc: "Unklare Regelungen des Erbrechts haben dazu geführt, dass Konflikte zwischen rivalisierenden Anspruchstellern überhand nehmen."
  sicilian_vespers: "Sizilianische Vesper"
