@@ -19,7 +19,8 @@
 -Austria is no longer formable by endgame nations
 -After the Ascenion of Ladislaus event, Styria no longer needs Linz and Innsbruck to form Austria
 -Hohenstaufer Inheritance incident can now also fire in the Age of Holy Wars
--The Polish Church no longer supports foreigners during the Fragmentation
+-To end the Fragmentation of Poland you now need to pacify all nationalist rebels
+-The Polish Church no longer supports foreigners during the Fragmentation of Poland
 -Decreased Edward the Confessor's lifespan even more and blocked him from introducing an heir manually
 -Russian core countries are less likely to secede if the province owner is not an appanage
 -Turkish beyliks will no longer grant Dhimmi autonomy
@@ -40,7 +41,7 @@
 -Fixed major bug preventing Industrialism from spawning for Rule Britannia owners
 -Forming the following nations now properly gives you their missions: Russia (by reforms), Great Britain (diplomatically), Lotharingia (as any tag other than Lorraine), Spain, Aquitaine, Tunis
 -There are no longer two separate decisions to form Dalmatia
--Fragmentation of Poland ending event should no longer fire twice if you choose to keep Poland united
+-Fixed several issues with the Fragmentation of Poland disaster; it should now end as normal and have two clear outcomes in the ending event
 -Refusing a province to become Germanic during the ostsiedlung will no longer cause nationwide unrest
 -The Szekely and Szaszok culture events can no longer fire more than once
 -Celje and Slovenia now use proper ship names from vanilla
